# merope

./: .gitignore  README.md  pyproject.toml
content/posts/: test_edgar_consignes.md
docs/: ARCHITECTURE_PROJET.md  CAHIER_DES_CHARGES_V1.md  CODEX_BRIEF_V1.md  ROADMAP.md  SPEC_JSON_CONFIG_V1.md  SPEC_TEI_V1.md  SPEC_UI_V1.md  TABLE_CORRESPONDANCE_MD_TEI_HTML.md
examples/minimal_project/config/: site.json
fixtures/markdown/: google_docs_real_export.md  image_caption.md  lists.md  notes.md  simple_post.md
fixtures/markdown_google_docs/: article_image.md  article_notes.md  page_longue.md
fixtures/markdown_required/: invalid_missing_title.md  invalid_missing_yaml.md  invalid_post_missing_date.md  valid_page.md  valid_post.md
fixtures/pandoc_realistic/: pandoc_like_input.md  pandoc_like_output.tei
src/blog_static_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/bloggen/: app.py
src/bloggen/config/: defaults.py  io.py  models.py  validator.py
src/bloggen/content/: assets.py  loader.py  metadata.py  slugify.py
src/bloggen/markdown/: front_matter.py  google_docs_cleanup.py  normalizer.py
tests/: _runtime_invalid_31e56e6dfb6d43c4aa694e6fb15ee3c9.json  _runtime_site_07a8122c37a647efb00c0e9d7e826772.json  test_build_reports.py  test_config.py  test_content_loader.py  test_end_to_end.py  test_google_docs_realistic.py  test_markdown_normalizer.py  test_media_handling.py  test_menu_editor.py  test_navigation.py  test_notes_rendering.py  test_pandoc_tei_converter.py  test_site_builder.py  test_slugify.py  test_tei_postprocess.py  test_xslt_runner.py
(+31 files in other folders)
