[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-static-generator"
version = "0.1.0"
description = "Générateur statique académique Markdown → TEI → HTML"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
